--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@heroicons/vue": "^2.1.5",
+    "@primevue/themes": "^4.2.2",
     "apexcharts": "^4.0.0",
+    "primevue": "^4.2.2",
     "vue": "^3.5.12",
     "vue3-apexcharts": "^1.7.0"
   },
