--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+      "paths": {
+          "@/*": [
+              "./src/*"
+          ]
+      }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+      "node_modules",
+      "dist"
+  ]
 }
