--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dashboard",
-  "version": "0.0.0",
+  "name": "vite-vue-starter",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,20 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@heroicons/vue": "^2.1.5",
+    "@primevue/auto-import-resolver": "^4.2.2",
     "@primevue/themes": "^4.2.2",
-    "apexcharts": "^4.0.0",
+    "axios": "^1.6.7",
+    "bootstrap-icons": "^1.11.3",
+    "chart.js": "^3.3.2",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
-    "vue": "^3.5.12",
-    "vue3-apexcharts": "^1.7.0"
+    "unplugin-vue-components": "^0.27.4",
+    "vue": "^3.4.38",
+    "vue-i18n": "^11.0.0-beta.1",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4"
+    "@vitejs/plugin-vue": "^5.1.3",
+    "sass-embedded": "^1.81.0",
+    "vite": "^5.4.2"
   }
 }
